# analytics-mcp-storyplex

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bandit.yaml  docker-compose.yml  mcp-config.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/pages/: Dashboard.tsx  Fandoms.tsx  Jobs.tsx  Works.tsx
k8s/: deployment.yaml  service.yaml
plans/: claude.md  gpt.md  perplexity.md
src/: __init__.py  cli.py  config.py  mcp_server.py
src/api/: __init__.py  app.py
src/api/routes/: analytics.py  fandoms.py  jobs.py  works.py
src/db/: __init__.py  connection.py  models.py  repository.py
src/llm/: __init__.py  service.py
src/scrapers/: __init__.py  base.py  browser.py
src/scrapers/ao3/: __init__.py  scraper.py
tests/: __init__.py  conftest.py  test_integration.py  test_llm_service.py  test_mcp_server.py  test_scraper.py
